# openhost-minecraft-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  claude.md  justfile  openhost.toml  pyproject.toml  style_guide.md
docs/src/: SUMMARY.md  creating_an_app.md  cross_app_services.md  data.md  introduction.md  manifest_spec.md  oauth.md  routing.md  user_identity.md
openhost_app_test_harness/: readme.md
openhost_app_test_harness/src/openhost_test_harness/: __init__.py  consumer_app.py  consumer_server.py  stack.py
openhost_app_test_harness/src/openhost_test_harness/tests/: test_consumer_app.py  test_harness_e2e.py
openhost_app_test_harness/src/openhost_test_harness/tests/provider_app/: Dockerfile  openhost.toml  server.py
scripts/: build_version_table.py
src/server/: app.py  datatypes.py  java.py  mod_loaders.py  routes.py  server.py  sessions.py  state.py  version_data.py  worlds.py
src/server/static/: app.js  index.html
tests/: conftest.py  test_app.py  test_units.py
